# Lili2D

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  check_docstrings.py  check_norms.py  compile_flags.txt  engine_refactor_specification.md  install.sh  lili_coding_norms.md  multithreading_summary.md  package_release.sh  resolve_conflicts.py  run_release_docker.sh  test_img.c  test_sdl.c
.antigravitycli/: e44f72ba-bb82-4a35-8860-171a404b560c.json
.github/: FUNDING.yml
cmake/: Lili2DConfig.cmake.in  embed_shader.cmake
docs/: ARCHITECTURE.md  Doxyfile  dag_conflict_resolution.md  multithreading_analysis.md  multithreading_design_patterns.md  parallel_movement_example.cpp  thread_pool_guide.md
docs/html/: animated__sprite_8hpp_source.html  animation_8hpp_source.html  animation__player_8hpp_source.html  animation__registry_8hpp_source.html  annotated.html  annotated_dup.js  asset__registry_8hpp_source.html  atlas__map_8hpp_source.html  camera_8hpp_source.html  chunk_8hpp_source.html  circle_8hpp_source.html  classes.html  classlili_1_1AABB.html  classlili_1_1AABB.js  classlili_1_1AnimatedSprite-members.html  classlili_1_1AnimatedSprite.html  classlili_1_1AnimatedSprite.js  classlili_1_1Animation-members.html  classlili_1_1Animation.html  classlili_1_1Animation.js  classlili_1_1AnimationPlayer-members.html  classlili_1_1AnimationPlayer.html  classlili_1_1AnimationPlayer.js  classlili_1_1AnimationRegistry-members.html  classlili_1_1AnimationRegistry.html  classlili_1_1AnimationRegistry.js  classlili_1_1AssetRegistry-members.html  classlili_1_1AssetRegistry.html  classlili_1_1AssetRegistry.js  classlili_1_1AtlasMap-members.html  classlili_1_1AtlasMap.html  classlili_1_1AtlasMap.js  classlili_1_1BitmapFont-members.html  classlili_1_1BitmapFont.html  classlili_1_1BitmapFont.js  classlili_1_1Camera-members.html  classlili_1_1Camera.html  classlili_1_1Camera.js  (+361 more)
examples/: CMakeLists.txt  README.md  build.sh  build_and_run.sh  run.sh
examples/hello_multithreading/: CMakeLists.txt  build.sh  run.sh
examples/hello_multithreading/src/: components.hpp  game.cpp  game.hpp  main.cpp  systems.cpp  systems.hpp
examples/hello_shader/: CMakeLists.txt  build.sh  build_and_run.sh  run.sh
examples/hello_shader/src/: app.cpp  app.hpp  rect.vert  text.frag  text.vert
examples/hello_sprite_batch/: CMakeLists.txt  build.sh  run.sh
examples/hello_sprite_batch/src/: app.cpp  app.hpp
lili2d/: CMakeLists.txt  Doxyfile  README.md  fix_includes.py  install.sh  rename.py  rename2.py  rename_fix.py  rename_revert.py  uninstall.sh
lili2d/cmake/: embed_shader.cmake
lili2d/html/: animated__sprite_8hpp_source.html  animation_8hpp_source.html  annotated.html  annotated_dup.js  atlas__map_8hpp_source.html  camera_8hpp_source.html  circle_8hpp_source.html  classes.html  classlili_1_1AABB-members.html  classlili_1_1AABB.html  classlili_1_1AABB.js  classlili_1_1AABB2-members.html  classlili_1_1AABB2.html  classlili_1_1AABB2.js  classlili_1_1AABB3-members.html  classlili_1_1AABB3.html  classlili_1_1AABB3.js  classlili_1_1AnimatedSprite-members.html  classlili_1_1AnimatedSprite.html  classlili_1_1AnimatedSprite.js  classlili_1_1Animation-members.html  classlili_1_1Animation.html  classlili_1_1Animation.js  classlili_1_1AnimationRegistry-members.html  classlili_1_1AnimationRegistry.html  classlili_1_1AnimationRegistry.js  classlili_1_1AtlasMap-members.html  classlili_1_1AtlasMap.html  classlili_1_1AtlasMap.js  classlili_1_1BitmapFont-members.html  classlili_1_1BitmapFont.html  classlili_1_1BitmapFont.js  classlili_1_1Camera-members.html  classlili_1_1Camera.html  classlili_1_1Camera.js  classlili_1_1Circle-members.html  classlili_1_1Circle.html  classlili_1_1Circle.js  classlili_1_1Clock-members.html  classlili_1_1Clock.html  (+249 more)
lili2d/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_d.js  classes_f.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  (+32 more)
lili2d/src/: lili2d.hpp
lili2d/src/core/: clock.cpp  clock.hpp  event.cpp  event.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  sdl_system.cpp  sdl_system.hpp  window.cpp  window.hpp
lili2d/src/geometry/: mat3x3.cpp  mat3x3.hpp  mat4x4.cpp  mat4x4.hpp  point2.cpp  point2.hpp  point3.cpp  point3.hpp  utils.cpp  utils.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
lili2d/src/lili/: core.hpp  geometry.hpp  lili2d.hpp  physics.hpp  render.hpp
lili2d/src/physics/: collision.cpp  collision.hpp
lili2d/src/render/: renderer.cpp  renderer.hpp
lili2d/src/render/core/: gpu_mesh.cpp  gpu_mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
lili2d/src/render/passes/: pass_types.hpp  ui_pass.cpp  ui_pass.hpp  world_2d_pass.cpp  world_2d_pass.hpp
lili2d/src/render/pipelines/: ui_pipeline.cpp  ui_pipeline.hpp  world_2d_pipeline.cpp  world_2d_pipeline.hpp
lili2d/src/render/scene/: animated_sprite.cpp  animated_sprite.hpp  animation.cpp  animation.hpp  atlas_map.cpp  atlas_map.hpp  camera.cpp  camera.hpp  material.cpp  material.hpp  model.cpp  model.hpp  rect.cpp  rect.hpp  sprite.cpp  sprite.hpp  text.cpp  text.hpp  utils.cpp  utils.hpp
lili2d/src/render/scene/common/: animation.cpp  animation.hpp  atlas_map.cpp  atlas_map.hpp  camera.cpp  camera.hpp  material.cpp  material.hpp  model.cpp  model.hpp  text.cpp  text.hpp  utils.cpp  utils.hpp
lili2d/src/render/scene/core2d/: animated_sprite.cpp  animated_sprite.hpp  sprite.cpp  sprite.hpp
lili2d/src/render/scene/shapes/: circle.cpp  circle.hpp  line.cpp  line.hpp  rect.cpp  rect.hpp
lili2d/src/shader/: world_2d.frag  world_2d.vert
scripts/: build.sh  install.sh
src/: lili2d.hpp
src/core/: ecs.cpp  (+11 more)
tests/: test_geometry.cpp  test_physics.cpp  test_scene.cpp
(+318 files in other folders)
